--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==6.2
 Django==3.2.9
+django-environ==0.8.1
 django-filter==21.1
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
